--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     </nav>
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-5" style="padding-top: 30px;padding-bottom: 30px;">
-          <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpt1/v/t1.0-1/p160x160/11705171_886330464819222_5330716459237139518_n.jpg?oh=e537ad21f5de8ea5c07df890fe8f3c06&oe=569183A7&__gda__=1452696794_26ef23353a7b9eece0614039c644006f" alt="..." class="img-round">
+        <div class="col-md-12" style="padding-top: 30px;padding-bottom: 30px;">
+          <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xpt1/v/t1.0-1/p160x160/11705171_886330464819222_5330716459237139518_n.jpg?oh=e537ad21f5de8ea5c07df890fe8f3c06&oe=569183A7&__gda__=1452696794_26ef23353a7b9eece0614039c644006f" alt="..." class="img-round center-block img-responsive">
         </div>
       </div>
       <div class="row">
